--- a/Java/tsp-ai-assessment/pom.xml
+++ b/Java/tsp-ai-assessment/pom.xml
@@ -13,7 +13,9 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <sonar.organization>pawelskorupa</sonar.organization>
+        <sonar.projectKey>PawelSkorupa_AI-tools-assessment</sonar.projectKey>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.login>a5746e6b136f58f05ebf81afee8ae9b20ce2f47d</sonar.login>
     </properties>
     <dependencies>
         <dependency>
